[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2021"
publish = false

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "macros", "sync"] }
ed25519-dalek = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
async-recursion = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }

store = { workspace = true }
crypto = { workspace = true }
network = { workspace = true }
mempool = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true, features = ["codec"] }
rand = { workspace = true }

[features]
benchmark = []
