[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
ed25519-dalek = { workspace = true, features = ["batch"] }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
base64 = { workspace = true }
