[package]
name = "mempool"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
ed25519-dalek = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

crypto = { workspace = true }
store = { workspace = true }
network = { workspace = true }

[dev-dependencies]
tokio-util = { workspace = true, features = ["codec"] }
rand = { workspace = true }

[features]
benchmark = []
