[package]
name = "network"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { workspace = true, features = ["codec"] }
thiserror = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
async-trait = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
