[package]
name = "node"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2021"
publish = false

[dependencies]
tokio = { workspace = true, features = [
  "time",
  "macros",
  "net",
  "rt-multi-thread",
] }
tokio-util = { workspace = true, features = ["codec"] }
log = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-stream = { workspace = true }

crypto = { workspace = true }
store = { workspace = true }
consensus = { workspace = true }
mempool = { workspace = true }

# Reth related dependencies
reth = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-tracing = { workspace = true }
eyre = { workspace = true }
reth-chainspec = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true, features = ["test-utils"] }
reth-node-builder = { workspace = true }
futures-util = { workspace = true }
reth-beacon-consensus = { workspace = true }
reth-blockchain-tree = { workspace = true }
reth-consensus-debug-client = { workspace = true }
reth-engine-util = { workspace = true }
reth-exex = { workspace = true }
reth-network = { workspace = true }
reth-node-events = { workspace = true }
reth-node-api = { workspace = true }
reth-provider = { workspace = true }
reth-rpc = { workspace = true }
reth-tasks = { workspace = true }
reth-payload-validator = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-rpc-types-compat = { workspace = true }
reth-primitives = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-payload-builder = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-evm = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }

alloy = { workspace = true, features = ["rlp", "rpc", "rpc-types"] }

# [features]
# benchmark = ["consensus/benchmark", "mempool/benchmark"]

[[bin]]
name = "client"
path = "src/main.rs"
# required-features = ["benchmark"]
